# deadlock-webhook

./: .env  .gitignore  Cargo.toml  flake.nix  last-post  service.nix
src/: cli.rs  format.rs  main.rs
