[package]
name = "deadlock-webhook"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = "0.13.4"
rss = "2.0.13"
serenity = "0.12.5"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
color-eyre = "0.6.5"
scraper = "0.27.0"
chumsky = "0.13.0"
steam-rs = { git = "https://github.com/justdeeevin/steam-rs", branch = "backport-fix-feeds-param" }
clap = { version = "4.6.1", features = ["derive"] }
aho-corasick = "1.1.4"
